Fix: Hero background image positioning on mobile devices

--- a/css/output.css
+++ b/css/output.css
@@ -743,8 +743,8 @@ video {
   background-size: cover;
 }
 
-.bg-bottom {
-  background-position: bottom;
+.bg-heroBgMobilePosition {
+  background-position: 70% bottom;
 }
 
 .p-5 {
@@ -848,6 +848,31 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-base\/loose {
+  font-size: 1rem;
+  line-height: 2;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-base\/4 {
+  font-size: 1rem;
+  line-height: 1rem;
+}
+
+.text-base\/5 {
+  font-size: 1rem;
+  line-height: 1.25rem;
+}
+
+.text-base\/10 {
+  font-size: 1rem;
+  line-height: 2.5rem;
 }
 
 .font-bold {
@@ -954,6 +979,10 @@ video {
 
   .sm\:gap-5 {
     gap: 1.25rem;
+  }
+
+  .sm\:bg-bottom {
+    background-position: bottom;
   }
 
   .sm\:py-0 {
